--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 
   <!-- style -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.min.css">
 
 </head>
 <body >
@@ -218,9 +218,9 @@
   </div>
 
 
-  
+  <!-- Slicing Created By Muhammad Rizal Wibowo, github: github.com/rzlwbo1 -->
   <script src="library/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-  <script src="main.js"></script>
+  <script src="main.min.js"></script>
 </body>
 </html>
